# norton_beer

./: .coverage  .gitignore  .readthedocs.yaml  AUTHORS  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  python-package.yml
docs/source/: conf.py  index.rst  modules.rst  norton_beer.rst  requirements.txt
norton_beer/: __init__.py  apodization.py  ils.py
norton_beer/_tests/: spatial_even.pkl  test_ils.py
src/docs/: norton_beer.rst
src/docs/source/: conf.py  index.rst
src/norton_beer/: __init__.py  apodization.py  ils.py  optimize.py
src/norton_beer/tests/: test_apodization.py  test_optimize.py
tests/: spatial_even.json  spatial_odd.json  test_apodization.py  test_ils.py  test_optimize.py
