[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "norton_beer"
version = "1.0.1"
description= "norton_beer 1.0.1"
readme = "README.md"
authors = [
    {name = "Konstantin Ntokas", email="k.ntokas@fz-juelich.de"},
]
requires-python = ">=3.8" 
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

keywords = [ "apodization" , "norton_beer" ]
dependencies = [
    "numpy >= 1.22.0",
    "scipy >= 1.4.1"
]

[project.urls]
repository =  "https://github.com/konstntokas/norton_beer"